// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataloader utils resolveSQLResult should return Array<Array<Object>>, ordered by key value, and injecting NULL in absense of a value [2nd and 3rd values should duplicated, because of key value] 1`] = `
[
  [
    {
      "v": 1,
    },
  ],
  [
    {
      "v": 3,
    },
    {
      "v": 3,
    },
  ],
  [
    {
      "v": 3,
    },
    {
      "v": 3,
    },
  ],
]
`;

exports[`dataloader utils resolveSQLResult should return Array<Array<Object>>, ordered by key value, and injecting NULL in absense/falsy value 1`] = `
[
  [
    {
      "v": 1,
    },
  ],
  null,
  [
    {
      "v": 3,
    },
    {
      "v": 3,
    },
  ],
]
`;

exports[`dataloader utils resolveSQLResult should return Array<Object>, ordered by key value, and injecting NULL in absense of/falsy value 1`] = `
[
  {
    "v": 1,
  },
  {
    "v": 2,
  },
  {
    "v": 3,
  },
  null,
]
`;
